<resources>
    <string name="app_name">CarTrader</string>
    <string name="title_home">Дом</string>
    <string name="title_dashboard">Главная</string>
    <string name="title_sign_in">Вход</string>
    <string name="title_sign_up">Регистрация</string>
    <string name="title_creating_a_lot">Создание лота</string>
    <string name="title_profile">Профиль</string>
    <string name="title_filter">Параметры</string>
    <string name="profile">Профиль</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="fill_empty_fields">Заполните пустые поля</string>
    <string name="field_is_empty">Поле пустое</string>
    <string name="search">Поиск</string>
    <string name="error_try_again">Ошибка! Пожалуйста, попробуйте снова</string>
    <string name="try_again">Обновить</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="characteristics">Характеристики</string>
    <string name="manufacturer_date">Год выпуска</string>
    <string name="mileage">Пробег</string>
    <string name="color">Цвет</string>
    <string name="brand_model">Марка и модель</string>
    <string name="brand">Марка</string>
    <string name="model">Модель</string>
    <string name="gearbox">КПП</string>
    <string name="drive_wheel">Привод</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancellation">Отмена</string>
    <string name="bid_confirm">Подтверждение ставки</string>
    <string name="seller_description">Комментарий продавца</string>
    <string name="description">Описание</string>
    <string name="popular_marks">Популярные марки</string>
    <string name="x_axis">Номер ставки</string>
    <string name="y_axis">Размер</string>
    <string name="success">Успех</string>
    <string name="clear_cache">Очистить кэш</string>
    <string name="clear_cache_button">Очистить кэш %1$s</string>
    <string name="auction_lot_is_registered">Ваш аукционный лот зарегестрирован</string>
    <string name="bid_reg_time">Время регистрации вашей ставки: %1$s</string>
    <string name="replenish_account">Пополнить счет</string>
    <string name="withdrawal_money">Вывести средства</string>
    <string name="logout">Выйти</string>
    <string name="current_balance">Текущий баланс</string>
    <string name="state">Состояние: %1$s</string>
    <string name="active_state">активен</string>
    <string name="waiting_state">ожидает начала</string>
    <string name="completed_state">завершен</string>
    <string name="empty_description">Нет комментариев от продавца</string>
    <string name="exactly_want_to_bid">Вы точно желаете сделать ставку %1$s?</string>
    <string name="own_auctions_page_title">Собственные</string>
    <string name="participate_auctions_page_title">Принял участие</string>
    <string name="car_name_template">%1$s %2$s</string>
    <string name="username_template">%1$s %2$s</string>
    <string name="file_has_been_saved">Файл %1$s сохранен</string>
    <string name="file_could_not_be_saved">Не удалось сохранить файл</string>
    <string name="min_bid_template">от %1$s</string>
    <string name="horsepower_template">%1$d л.с.</string>
    <string name="mileage_template">%1$d км.</string>
    <string name="trading_date">Дата проведения</string>
    <string name="trading_start_time">Время начала торгов</string>
    <string name="trading_end_time">Время окончания торгов</string>
    <string name="find">Найти</string>
    <string name="Car">Автомобиль</string>
    <string name="details">Детали торгов</string>
    <string name="min_bid_amount">Начальная ставка</string>
    <string name="publish">Опубликовать</string>
    <string name="add_photos">Добавить фото</string>
    <string name="empty">Пусто</string>
    <string name="progress_bar_days">Дни: </string>
    <string name="progress_bar_hours">Часы: </string>
    <string name="progress_bar_minutes">Мин.: </string>
    <string name="progress_bar_seconds">Сек.: </string>
    <string name="date_range_template">%1$s - %2$s</string>
    <string name="gearbox_automatic">Автоматическая</string>
    <string name="gearbox_manual">Механическая</string>
    <string name="gearbox_cvt">Вариатор</string>
    <string name="color_red">Красный</string>
    <string name="color_blue">Синий</string>
    <string name="color_green">Зеленый</string>
    <string name="color_black">Черный</string>
    <string name="color_white">Белый</string>
    <string name="driveWheel_fwd">Передний</string>
    <string name="driveWheel_fourwd">Постоянный полный</string>
    <string name="driveWheel_awd">Подключаемый полный</string>
    <string name="driveWheel_rwd">Задний</string>
    <string name="of">От</string>
    <string name="to">До</string>
    <string name="horsepower_number">Количество лошадиных сил</string>
    <string name="vin">VIN</string>
    <string name="engine">Двигатель</string>
    <string name="actual_bid_amount">Актуальная ставка</string>
    <string name="bid_count">Количество ставок</string>
    <string name="bids_made_title">Сделано ставок</string>
    <string name="held_auctions_title">Проведено аукционов</string>
    <string name="phone_number">Телефон</string>
    <string name="sign_in">Войти</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="registration_date">Дата регистрации</string>
    <string name="send_bid">Сделать ставку</string>
    <string name="amount">Сумма</string>
    <string name="number">Номер</string>
    <string name="validity_period">Срок действия</string>
    <string name="cvv_cvc">CVV / CVC</string>
    <string name="reset">Сбросить</string>
    <string name="cache">Кэш</string>
    <string name="operation_was_completed_successfully">Операция была завершена успешно </string>
    <string name="fetch_auction_protocol">Получить протокол</string>
    <string name="please_wait">подождите</string>
    <string name="incorrect_email">Некорректный адрес почты</string>
    <string name="empty_field_error">Заполните пустое поле</string>
    <string name="incorrect_phone">Некорректный номер телефона</string>
    <string name="too_short">Пароль слишком короткий</string>
    <string name="no_uppercase">В пароле нет символов в верхнем регистре</string>
    <string name="no_digits">В пароле нет цифр</string>
    <string name="empty_photos_error">Добавте фото</string>
    <string name="empty_date_error">Укажите дату проведения торгов</string>
    <string name="available_space">Свободно %1$s</string>
    <string name="occupied_space">Занято %1$s</string>
    <string name="total_space">Всего %1$s</string>
    <string name="incorrect_open_date">Укажите дату открытия аукциона</string>
    <string name="incorrect_close_date">Укажите дату закрытия аукциона</string>
    <string name="empty_brand">Укажите марку</string>
    <string name="empty_model">Укажите модель</string>
    <string name="incorrect_vin">Некорректный VIN номер</string>
    <string name="empty_description_error">Добавьте описание</string>
    <string name="empty_min_bid">Укажите начальную ставку</string>
    <string name="empty_color">Укажите цвет автомобиля</string>
    <string name="empty_mileage">Укажите пробег</string>
    <string name="empty_gearbox">Укажите тип коробки передач</string>
    <string name="empty_drive_wheel">Укажите тип руль</string>
    <string name="empty_horsepower">Укажите количество лошадиных сил</string>
    <string name="incorrect_manufacturer_year">Укажите год выпуска</string>
    <string name="conflict">Проверьте правильность введённых данных и попробуйте снова</string>
    <string name="error">Ошибка</string>
    <string name="timer_error">Ошибка таймера</string>
    <string name="not_found">Информация не найдена</string>
    <string name="bad_request">Ошибка запроса</string>
    <string name="unauthorized_request">Не авторизованный запрос</string>
    <string name="request_timeout">Время ожидания вышло</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="replenish">Пополнить</string>
    <string name="withdraw">Вывести</string>
    <string name="withdrawal">Вывод</string>
    <string name="withdrawal_description">Выводите свои средства в любое время</string>
    <string name="replenishment">Пополнение</string>
    <string name="replenishment_description">Пополните свой баланс сейчас</string>
    <string name="cache_description">Очистите место на устройстве от лишних данных</string>
</resources>