<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="32dp"
    tools:context=".ui.views.profile.CacheBottomDialog">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cache"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondary_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cache_description"
        app:layout_constraintStart_toStartOf="@id/title_textView"
        app:layout_constraintTop_toBottomOf="@id/title_textView" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/capacity_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondary_title_textView" />

    <Button
        android:id="@+id/clear_cache_button"
        style="@style/GlobalButtonStyle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/clear_cache_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capacity_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>