<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:fillViewport="true"
    tools:context=".ui.views.auth.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mitr_semibold"
            android:paddingBottom="16dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:hint="@string/mail"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintBottom_toTopOf="@id/last_name_EditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/last_name_EditText"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintBottom_toTopOf="@id/first_name_EditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailEditText"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/first_name_EditText"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintBottom_toTopOf="@id/last_name_EditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/last_name_EditText"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/middle_name_EditText"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/middle_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintBottom_toTopOf="@id/phone_EditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/first_name_EditText"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/phone_EditText"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLength="11"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintBottom_toTopOf="@id/passwordEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/middle_name_EditText"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintBottom_toTopOf="@id/createAccountButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_EditText" />

                <Button
                    android:id="@+id/createAccountButton"
                    style="@style/GlobalTextInputStyle.Big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_space"
                    android:text="@string/create_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>