<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:fillViewport="true"
    tools:context=".ui.views.auth.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mitr_semibold"
            android:paddingBottom="16dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:hint="@string/mail"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintBottom_toTopOf="@id/passwordEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintBottom_toTopOf="@id/signInButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailEditText" />

                <Button
                    android:id="@+id/signInButton"
                    style="@style/GlobalTextInputStyle.Big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_space"
                    android:text="@string/sign_in"
                    app:layout_constraintBottom_toTopOf="@id/signUpButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

                <Button
                    android:id="@+id/signUpButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/create_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signInButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</ScrollView>