<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="32dp"
    tools:context=".ui.views.profile.WithdrawalBottomDialog">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdrawal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondary_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdrawal_description"
        app:layout_constraintStart_toStartOf="@+id/title_textView"
        app:layout_constraintTop_toBottomOf="@+id/title_textView" />

    <ImageView
        android:id="@+id/car_iv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toStartOf="@+id/right_iv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondary_title_textView"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/user_iv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/right_iv"
        app:layout_constraintTop_toBottomOf="@+id/secondary_title_textView" />

    <ImageView
        android:id="@+id/right_iv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_right"
        app:layout_constraintBottom_toBottomOf="@+id/car_iv"
        app:layout_constraintEnd_toStartOf="@+id/user_iv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/car_iv"
        app:layout_constraintTop_toTopOf="@+id/car_iv" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number"
        app:layout_constraintBottom_toTopOf="@id/number_text_input"
        app:layout_constraintEnd_toEndOf="@id/number_text_input"
        app:layout_constraintStart_toStartOf="@id/number_text_input" />

    <com.github.pinball83.maskededittext.MaskedEditText
        android:id="@+id/number_text_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_layout_background"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:lines="1"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/right_iv"
        app:mask="****  ****  ****  ****"
        app:notMaskedSymbol="*" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        app:layout_constraintBottom_toTopOf="@+id/money_text_input"
        app:layout_constraintEnd_toEndOf="@+id/money_text_input"
        app:layout_constraintStart_toStartOf="@+id/money_text_input" />

    <EditText
        android:id="@+id/money_text_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:lines="1"
        android:paddingHorizontal="16dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_text_input"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/confirm_button"
        style="@style/GlobalButtonStyle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/withdraw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/money_text_input" />
</androidx.constraintlayout.widget.ConstraintLayout>